--- a/Solar-and-Lunar-Eclipse-Capstone.ipynb
+++ b/Solar-and-Lunar-Eclipse-Capstone.ipynb
@@ -1637,6 +1637,136 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Catalog Number\n",
+      "1             [-1999, June, 12]\n",
+      "2          [-1999, December, 5]\n",
+      "3              [-1998, June, 1]\n",
+      "4         [-1998, November, 25]\n",
+      "5            [-1997, April, 22]\n",
+      "6              [-1997, May, 22]\n",
+      "7          [-1997, October, 16]\n",
+      "8         [-1997, November, 14]\n",
+      "9            [-1996, April, 10]\n",
+      "10          [-1996, October, 4]\n",
+      "11           [-1995, March, 30]\n",
+      "12       [-1995, September, 24]\n",
+      "13           [-1994, March, 20]\n",
+      "14       [-1994, September, 13]\n",
+      "15         [-1993, February, 8]\n",
+      "16            [-1993, March, 9]\n",
+      "17           [-1993, August, 3]\n",
+      "18         [-1992, January, 29]\n",
+      "19            [-1992, July, 23]\n",
+      "20         [-1991, January, 17]\n",
+      "21            [-1991, July, 12]\n",
+      "22          [-1990, January, 6]\n",
+      "23             [-1990, July, 2]\n",
+      "24        [-1990, November, 26]\n",
+      "25             [-1989, May, 23]\n",
+      "26        [-1989, November, 16]\n",
+      "27             [-1988, May, 11]\n",
+      "28         [-1988, November, 4]\n",
+      "29              [-1987, May, 1]\n",
+      "30         [-1987, October, 25]\n",
+      "                  ...          \n",
+      "11869      [2988, November, 30]\n",
+      "11870           [2989, May, 26]\n",
+      "11871      [2989, November, 19]\n",
+      "11872           [2990, May, 15]\n",
+      "11873       [2990, November, 8]\n",
+      "11874          [2991, April, 6]\n",
+      "11875            [2991, May, 5]\n",
+      "11876     [2991, September, 29]\n",
+      "11877       [2991, October, 28]\n",
+      "11878         [2992, March, 25]\n",
+      "11879     [2992, September, 17]\n",
+      "11880         [2993, March, 14]\n",
+      "11881      [2993, September, 7]\n",
+      "11882          [2994, March, 3]\n",
+      "11883        [2994, August, 28]\n",
+      "11884       [2995, January, 22]\n",
+      "11885      [2995, February, 20]\n",
+      "11886          [2995, July, 18]\n",
+      "11887        [2995, August, 17]\n",
+      "11888       [2996, January, 11]\n",
+      "11889           [2996, July, 6]\n",
+      "11890      [2996, December, 31]\n",
+      "11891          [2997, June, 26]\n",
+      "11892      [2997, December, 20]\n",
+      "11893          [2998, June, 15]\n",
+      "11894      [2998, December, 10]\n",
+      "11895            [2999, May, 6]\n",
+      "11896       [2999, October, 30]\n",
+      "11897         [3000, April, 26]\n",
+      "11898       [3000, October, 19]\n",
+      "Name: Calendar Date, Length: 11898, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create empty lists\n",
+    "y_solar = []\n",
+    "y_lunar = []\n",
+    "\n",
+    "#append 1 if total eclipse, else 0\n",
+    "for type in solar['Eclipse Type']:\n",
+    "    if type is 'T':\n",
+    "        y_solar.append(1)\n",
+    "    else:\n",
+    "        y_solar.append(0)\n",
+    "\n",
+    "#make a dictionary with months and the total days upto that month\n",
+    "month_dict = {'January':0, 'February':31, 'March':59, 'April':90, 'May':120, 'June':151, 'July': 181, 'August':212, 'September':243, 'October':273, 'November':304, 'December':334}\n",
+    "beginning_date = solar['Calendar Date']\n",
+    "def days_from_initial(current_date):\n",
+    "    current_year = current_date[0]\n",
+    "    current_month = current_date[1]\n",
+    "    current_day = current_date[2]\n",
+    "    \n",
+    "    if current_year > beginning_date[0]:\n",
+    "        \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
