--- a/Solar-and-Lunar-Eclipse-Capstone.ipynb
+++ b/Solar-and-Lunar-Eclipse-Capstone.ipynb
@@ -13,7 +13,11 @@
     "* **Data Cleaning:** Replacement of '-' with python NaN values and formatting the date\n",
     "* **Exploratory Data Analysis:** Exploring the variation of trends between the two types of eclipses (Solar and Lunar) as well as the trends in each, with respect to seasonality\n",
     "* **Statistical Analysis:** Quantitative analysis of statistical significance of EDA findings\n",
-    "* **Machine Learning Approach:** Analyzing data and trends using various ML modelling techniques and comparing the performance of these methods\n"
+    "* **Machine Learning Approach:** Analyzing data and trends using various ML modelling techniques and comparing the performance of these methods\n",
+    "\n",
+    "\n",
+    "\n",
+    "* **Data:** acquired from Kaggle https://www.kaggle.com/nasa/solar-eclipses"
    ]
   },
   {
@@ -3119,12 +3123,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "hidden": true,
     "lines_to_next_cell": 2
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root Mean Squared Error: 5.456267831334569\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn import linear_model\n",
     "from sklearn.model_selection import GridSearchCV\n",
